# helloQt

./: CMakeLists.txt  README.md  hello_qt_tr_TR.ts  hellowindow.cpp  hellowindow.h  hellowindow.ui  main.cpp
